operator/pkg/gateway-api/testdata/gamma/mesh-query-param-matching/output/httproute-mesh-query-param-matching.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: mesh-query-param-matching
  namespace: gateway-conformance-mesh
  resourceVersion: "1000"
spec:
  parentRefs:
  - group: ""
    kind: Service
    name: echo
    port: 80
  rules:
  - backendRefs:
    - name: echo-v1
      port: 8080
    matches:
    - queryParams:
      - name: animal
        value: whale
  - backendRefs:
    - name: echo-v2
      port: 8080
    matches:
    - queryParams:
      - name: animal
        value: dolphin
  - backendRefs:
    - name: echo-v1
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /path1
      queryParams:
      - name: animal
        value: whale
  - backendRefs:
    - name: echo-v2
      port: 8080
    matches:
    - headers:
      - name: version
        value: one
      queryParams:
      - name: animal
        value: whale
  - backendRefs:
    - name: echo-v1
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /path3
      queryParams:
      - name: animal
        value: shark
    - headers:
      - name: version
        value: three
      path:
        type: PathPrefix
        value: /path4
      queryParams:
      - name: animal
        value: kraken
  - backendRefs:
    - name: echo-v1
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /path5
  - backendRefs:
    - name: echo-v2
      port: 8080
    matches:
    - queryParams:
      - name: animal
        value: hydra
status:
  parents:
  - conditions:
    - lastTransitionTime: "2025-06-19T03:39:58Z"
      message: Accepted HTTPRoute
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-06-19T03:39:58Z"
      message: Service reference is valid
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    controllerName: io.cilium/gateway-controller
    parentRef:
      group: ""
      kind: Service
      name: echo
      port: 80
